@@ -171,7 +171,6 @@ comes with this distribution for details.
 - Test::Pod::Coverage
 - Test::Pod::Spelling::CommonMistakes
 - Test::Script
-- Test::Script::Async
 - Test::Spelling
 - Test::Version
 - Text::Hunspell::FFI
