@@ -142,7 +142,6 @@ Test::Clustericious::Cluster                   = 0.37
 Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.23
-Test::Script::Async                            = 0.02
 Test::Version                                  = 2.05
 Test2::Plugin::FauxHomeDir                     = 0.03
 Test2::Tools::URL                              = 0.02
